<resources>
    <string name="app_name">Currency Converter</string>
    <string name="swap_icon">swap_icon</string>
    <string name="_0_0">$0.00</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="delete">Del</string>
    <string name="dollar_sign">$%1$s</string>
    <string name="point">.</string>
    <string name="to">TO</string>
    <string name="flag">flag</string>
    <string name="from">FROM</string>
</resources>
